<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="warning_take_photo">Сделайте фото!</string>
    <string name="big_size">Большее</string>
    <string name="normal_size">Среднее</string>
    <string name="small_size">Малое</string>
    <string name="save_as_label">Сохранить как...</string>
    <string name="app_name">TRDOC Camera</string>
    <string name="action_settings">Настройки</string>
    <string name="action_popup">Настройки всплывающих окон</string>
    <string name="answer_yes">Да</string>
    <string name="answer_no">Нет</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="choose_save_location">Выберите папку сохранения:</string>
    <string name="clear_folder_history">Очистить историю папки</string>
    <string name="clear_folder_history_question">Очистить историю папки?</string>
    <string name="choose_another_folder">Выбрать другую папку</string>
    <string name="repeats_to_go">повторов осталось</string>
    <string name="video_may_be_corrupted">Ошибка, видеофайл может быть поврежден</string>
    <string name="not_supported">Не поддерживается на вашем устройстве</string>
    <string name="video_error_unknown">Неизвестная ошибка, видео остановлено</string>
    <string name="video_error_server_died">Сервер умер, видео остановлено</string>
    <string name="video_max_duration">Видео достигло максимальной продолжительности</string>
    <string name="video_max_filesize">Видео достигло максимального размера</string>
    <string name="exposure_compensation">Компенсация экспозиции</string>
    <string name="focus_distance">Фокусное расстояние</string>
    <string name="infinite">Бесконечно</string>
    <string name="photo">Фото</string>
    <string name="video">Видео</string>
    <string name="failed_to_record_video">Не удалось записать видео</string>
    <string name="sorry">К сожалению</string>
    <string name="audio_disabled">Аудио выключено</string>
    <string name="max_duration">Макс. продолжительность</string>
    <string name="color_effect">Цветовой эффект</string>
    <string name="scene_mode">Сцена</string>
    <string name="white_balance">Баланс белого</string>
    <string name="angle">Угол</string>
    <string name="direction">Направление</string>
    <string name="failed_to_open_camera_1">Не удалось открыть камеру.</string>
    <string name="failed_to_open_camera_2">Камера может быть использована</string>
    <string name="failed_to_open_camera_3">другим приложением?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Масштаб</string>
    <string name="screen_lock_message_1">[Заблокировано:</string>
    <string name="screen_lock_message_2">Проведите по экрану, чтобы разблокировать]</string>
    <string name="metres_abbreviation">м</string>
    <string name="preference_auto_stabilise">Автостабилизация</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Folder to save the photo/video files in</string>
    <string name="preference_using_saf">Use Storage Access Framework</string>
    <string name="preference_using_saf_summary">Whether to use Android 5\'s Storage Access Framework for saving photos and videos</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_zulu_time_summary">Whether to use local or UTC (Coordinated Universal Time) time for naming photos and videos</string>
    <string name="preference_startup_focus">Perform auto-focus on startup</string>
    <string name="preference_startup_focus_summary">Whether to auto-focus when Open Camera is started. If you have the problem of flash turning on when starting, disable this option</string>
    <string name="preference_lock_video">Lock screen when recording video</string>
    <string name="preference_lock_video_summary">When recording video, the GUI will be locked to prevent accidentally stopping recording. Swipe the screen to unlock. Note that video recording will always stop if the app goes into background or the screen is blanked.</string>
    <string name="preference_rotate_preview">Rotate preview</string>
    <string name="preference_rotate_preview_summary">Option to rotate the preview (won\'t affect resultant photos/videos)</string>
    <string name="preference_screen_gui">On screen GUI…</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_preview_size_summary">How to choose the preview size</string>
    <string name="preference_show_iso">Show ISO</string>
    <string name="preference_show_iso_summary">Display the current ISO level (requires Camera2 API)</string>
    <string name="preference_grid">Show a grid</string>
    <string name="preference_grid_summary">Display one of various grids</string>
    <string name="grid">Grid</string>
    <string name="preference_crop_guide">Show a crop guide</string>
    <string name="preference_crop_guide_summary">A crop guide displays a rectangle showing what the specified aspect ratio looks like - useful if you plan to crop the photo/video afterwards to a different aspect ratio. Requires WYSIWYG photo mode, or being in video mode.</string>
    <string name="preference_take_photo_border">Show border when taking photo</string>
    <string name="preference_take_photo_border_summary">Display a border on the display to indicate taking a photo</string>
    <string name="preference_keep_display_on">Keep display on</string>
    <string name="preference_keep_display_on_summary">If enabled, the screen won\'t switch off while the main Open Camera UI is active</string>
    <string name="preference_category_camera_quality">Photo and Video Settings</string>
    <string name="preference_screen_photo_settings">Photo settings…</string>
    <string name="preference_screen_video_settings">Video settings…</string>
    <string name="preference_screen_location_settings">Location settings…</string>
    <string name="preference_resolution">Camera resolution</string>
    <string name="preference_resolution_summary">Set the resolution of photos taken by the camera</string>
    <string name="preference_location">Store location data (Geotagging)</string>
    <string name="preference_location_summary">Store GPS location data in the photos/videos</string>
    <string name="preference_stamp">Stamp photos</string>
    <string name="preference_stamp_summary">Stamp photos with date and time; and also GPS info if location/direction data is enabled</string>
    <string name="preference_stamp_dateformat">Datestamp format</string>
    <string name="preference_stamp_dateformat_summary">Specify the format of the datestamp (if enabled)</string>
    <string name="preference_stamp_timeformat">Timestamp format</string>
    <string name="preference_stamp_timeformat_summary">Specify the format of the timestamp (if enabled)</string>
    <string name="preference_stamp_gpsformat">GPS stamp format</string>
    <string name="preference_stamp_gpsformat_summary">Specify the format of the GPS stamp (if enabled)</string>
    <string name="preference_background_photo_saving">Use background thread</string>
    <string name="preference_background_photo_saving_summary">Whether to save photos on a background thread (for faster operation)</string>
    <string name="video_quality">Video resolution</string>
    <string name="video_quality_summary">Set the resolution of videos</string>
    <string name="preference_video_stabilization">Enable video stabilization</string>
    <string name="preference_video_stabilization_summary">Video stabilization reduces the shaking due to the motion of the camera in both the preview and in recorded videos</string>
    <string name="preference_video_max_duration">Maximum duration of video</string>
    <string name="preference_video_max_duration_summary">The video recording will stop after the specified duration</string>
    <string name="preference_video_restart">Restart video after max duration</string>
    <string name="preference_video_restart_summary">If the video has stopped after hitting the maximum duration (if set), this option will make the video restart, up to the specified number of times</string>
    <string name="preference_video_max_filesize">Maximum file size of video</string>
    <string name="preference_video_max_filesize_summary">The video recording will stop and/or restart (see option below) when the (approximate) maximum file size is reached. Note that almost all Android devices have a maximum file size for videos (typically around 2GB or 4GB), but this option allows setting a specific value</string>
    <string name="preference_video_flash">Flash while recording video</string>
    <string name="preference_video_flash_summary">If enabled, flash will switch on/off when recording video (can be used to tell camera is still recording at a distance)</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="exposure">Exposure</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="switch_to_video">Switch to video mode</string>
    <string name="switch_to_photo">Switch to photo mode</string>
    <string name="trash">Delete Last Picture</string>
    <string name="parent_folder">Parent Folder</string>
    <string name="use_folder">Use Folder</string>
    <string name="new_folder">New Folder</string>
    <string name="cant_write_folder">Can\'t write to this folder</string>
    <string name="cant_access_folder">Can\'t access this folder</string>
    <string name="enter_new_folder">Enter new folder name</string>
    <string name="failed_create_folder">Failed to create folder</string>
    <string name="folder_exists">Folder already exists</string>
    <string name="loading">Загрузка…</string>
    <string name="saf_select_save_location">Select a save location</string>
    <string name="file_upload_finished">Загрузка файла %s завершена</string>
    <string name="file_upload_failed">Ошибка: Загрузка файла %s не завершена</string>
    <string name="start_video">Start recording video</string>
    <string name="stop_video">Stop recording video</string>
    <string name="max_filesize">Max file size</string>
    <string name="mb_abbreviation">MB</string>
    <string name="auto_stabilise_info">Auto-stabilise will automatically rotate photos so that they appear level.\n\nNote that this means images will come out a slightly lower resolution (due to the rotation and cropping that\'s required).</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="preference_category_stamp">Photo Stamp</string>
    <string name="commonIOException">Ошибка [Код A01{0}]. Проблема в работе с сетью или чтением/записью в файл.</string>
    <string name="close">Закрыть</string>
</resources>