<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="preference_category_camera_controls"
        android:title="@string/preference_category_camera_controls">


        <PreferenceScreen
            android:key="preference_screen_camera_controls_more"
            android:title="@string/preference_screen_camera_controls_more"
            android:persistent="false">


            <SwitchPreference
                android:key="preferencepause_preview"
                android:title="@string/preference_pause_preview"
                android:summary="@string/preference_pause_preview_summary"
                android:defaultValue="false" />

            <SwitchPreference
                android:key="preference_shutter_sound"
                android:title="@string/preference_shutter_sound"
                android:summary="@string/preference_shutter_sound_summary"
                android:defaultValue="true" />


            <Preference
                android:key="preference_save_location"
                android:title="@string/preference_save_location"
                android:summary="@string/preference_save_location_summary"
                android:dialogTitle="@string/preference_save_location"
                android:dialogMessage="@string/preference_save_location_summary"
                android:inputType="text"
                android:defaultValue="OpenCamera" />

            <SwitchPreference
                android:key="preference_using_saf"
                android:title="@string/preference_using_saf"
                android:summary="@string/preference_using_saf_summary"
                android:defaultValue="false" />

            <EditTextPreference
                android:key="preference_save_photo_prefix"
                android:title="@string/preference_save_photo_prefix"
                android:summary="@string/preference_save_photo_prefix_summary"
                android:dialogTitle="@string/preference_save_photo_prefix"
                android:dialogMessage="@string/preference_save_photo_prefix_summary"
                android:inputType="text"
                android:defaultValue="IMG_" />

            <EditTextPreference
                android:key="preference_save_video_prefix"
                android:title="@string/preference_save_video_prefix"
                android:summary="@string/preference_save_video_prefix_summary"
                android:dialogTitle="@string/preference_save_video_prefix"
                android:dialogMessage="@string/preference_save_video_prefix_summary"
                android:inputType="text"
                android:defaultValue="VID_" />

            <ListPreference
                android:key="preference_save_zulu_time"
                android:title="@string/preference_save_zulu_time"
                android:summary="@string/preference_save_zulu_time_summary"
                android:entries="@array/preference_save_zulu_time_entries"
                android:entryValues="@array/preference_save_zulu_time_values"
                android:defaultValue="local" />

            <SwitchPreference
                android:key="preference_startup_focus"
                android:title="@string/preference_startup_focus"
                android:summary="@string/preference_startup_focus_summary"
                android:defaultValue="true" />

        </PreferenceScreen>

        <PreferenceScreen
            android:key="preference_screen_gui"
            android:title="@string/preference_screen_gui"
            android:persistent="false">

            <ListPreference
                android:key="preference_preview_size"
                android:title="@string/preference_preview_size"
                android:summary="@string/preference_preview_size_summary"
                android:entries="@array/preference_preview_size_entries"
                android:entryValues="@array/preference_preview_size_values"
                android:defaultValue="preference_preview_size_wysiwyg" />


            <CheckBoxPreference
                android:key="preference_show_iso"
                android:title="@string/preference_show_iso"
                android:summary="@string/preference_show_iso_summary"
                android:defaultValue="true" />


            <ListPreference
                android:key="preference_grid"
                android:title="@string/preference_grid"
                android:summary="@string/preference_grid_summary"
                android:entries="@array/preference_grid_entries"
                android:entryValues="@array/preference_grid_values"
                android:defaultValue="preference_grid_none" />

            <ListPreference
                android:key="preference_crop_guide"
                android:title="@string/preference_crop_guide"
                android:summary="@string/preference_crop_guide_summary"
                android:entries="@array/preference_crop_guide_entries"
                android:entryValues="@array/preference_crop_guide_values"
                android:defaultValue="crop_guide_none" />


            <CheckBoxPreference
                android:key="preference_take_photo_border"
                android:title="@string/preference_take_photo_border"
                android:summary="@string/preference_take_photo_border_summary"
                android:defaultValue="true" />

            <SwitchPreference
                android:key="preference_keep_display_on"
                android:title="@string/preference_keep_display_on"
                android:summary="@string/preference_keep_display_on_summary"
                android:defaultValue="true" />


            <ListPreference
                android:key="preference_rotate_preview"
                android:title="@string/preference_rotate_preview"
                android:summary="@string/preference_rotate_preview_summary"
                android:entries="@array/preference_rotate_preview_entries"
                android:entryValues="@array/preference_rotate_preview_values"
                android:defaultValue="0" />

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_camera_quality"
        android:title="@string/preference_category_camera_quality">

        <PreferenceScreen
            android:key="preference_screen_photo_settings"
            android:title="@string/preference_screen_photo_settings"
            android:persistent="false">

            <ListPreference
                android:key="preference_resolution"
                android:title="@string/preference_resolution"
                android:summary="@string/preference_resolution_summary" />

            <SwitchPreference
                android:key="preference_background_photo_saving"
                android:title="@string/preference_background_photo_saving"
                android:summary="@string/preference_background_photo_saving_summary"
                android:defaultValue="true" />

            <PreferenceCategory
                android:key="preference_category_stamp"
                android:title="@string/preference_category_stamp">

                <ListPreference
                    android:key="preference_stamp"
                    android:title="@string/preference_stamp"
                    android:summary="@string/preference_stamp_summary"
                    android:entries="@array/preference_stamp_entries"
                    android:entryValues="@array/preference_stamp_values"
                    android:defaultValue="preference_stamp_no" />

                <ListPreference
                    android:key="preference_stamp_dateformat"
                    android:title="@string/preference_stamp_dateformat"
                    android:summary="@string/preference_stamp_dateformat_summary"
                    android:entries="@array/preference_stamp_dateformat_entries"
                    android:entryValues="@array/preference_stamp_dateformat_values"
                    android:defaultValue="preference_stamp_dateformat_default" />

                <ListPreference
                    android:key="preference_stamp_timeformat"
                    android:title="@string/preference_stamp_timeformat"
                    android:summary="@string/preference_stamp_timeformat_summary"
                    android:entries="@array/preference_stamp_timeformat_entries"
                    android:entryValues="@array/preference_stamp_timeformat_values"
                    android:defaultValue="preference_stamp_timeformat_default" />

                <ListPreference
                    android:key="preference_stamp_gpsformat"
                    android:title="@string/preference_stamp_gpsformat"
                    android:summary="@string/preference_stamp_gpsformat_summary"
                    android:entries="@array/preference_stamp_gpsformat_entries"
                    android:entryValues="@array/preference_stamp_gpsformat_values"
                    android:defaultValue="preference_stamp_gpsformat_default" />

            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="preference_screen_video_settings"
            android:title="@string/preference_screen_video_settings"
            android:persistent="false">

            <ListPreference
                android:key="preference_video_quality"
                android:title="@string/video_quality"
                android:summary="@string/video_quality_summary" />


            <SwitchPreference
                android:key="preference_video_stabilization"
                android:title="@string/preference_video_stabilization"
                android:summary="@string/preference_video_stabilization_summary"
                android:defaultValue="false" />


            <ListPreference
                android:key="preference_video_max_duration"
                android:title="@string/preference_video_max_duration"
                android:summary="@string/preference_video_max_duration_summary"
                android:entries="@array/preference_video_max_duration_entries"
                android:entryValues="@array/preference_video_max_duration_values"
                android:defaultValue="0" />

            <ListPreference
                android:key="preference_video_restart"
                android:title="@string/preference_video_restart"
                android:summary="@string/preference_video_restart_summary"
                android:entries="@array/preference_video_restart_entries"
                android:entryValues="@array/preference_video_restart_values"
                android:defaultValue="0" />

            <ListPreference
                android:key="preference_video_max_filesize"
                android:title="@string/preference_video_max_filesize"
                android:summary="@string/preference_video_max_filesize_summary"
                android:entries="@array/preference_video_max_filesize_entries"
                android:entryValues="@array/preference_video_max_filesize_values"
                android:defaultValue="0" />

            <SwitchPreference
                android:key="preference_lock_video"
                android:title="@string/preference_lock_video"
                android:summary="@string/preference_lock_video_summary"
                android:defaultValue="false" />

            <SwitchPreference
                android:key="preference_video_flash"
                android:title="@string/preference_video_flash"
                android:summary="@string/preference_video_flash_summary"
                android:defaultValue="false" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="preference_screen_location_settings"
            android:title="@string/preference_screen_location_settings"
            android:persistent="true">

            <CheckBoxPreference
                android:key="preference_location"
                android:title="@string/preference_location"
                android:summary="@string/preference_location_summary"
                android:defaultValue="true" />

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
