<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CamActivity">

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:contentDescription="@string/take_photo"
        android:onClick="clickedTakePhoto"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/take_photo_selector" />

    <SeekBar
        android:id="@+id/zoom_seekbar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/zoom" />

    <SeekBar
        android:id="@+id/focus_seekbar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/focus_distance"
        android:visibility="invisible" />

    <Button
        android:id="@+id/gui_anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="1dp"
        android:scaleType="fitCenter" />

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:visibility="gone"
        android:id="@+id/settings"
        android:contentDescription="@string/action_settings"
        android:onClick="clickedSettings"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings" />

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/gallery"
        android:contentDescription="@string/gallery"
        android:onClick="clickedGallery"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_gallery" />

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/close"
        android:contentDescription="@string/close"
        android:onClick="clickedExit"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_exit" />

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/popup"
        android:contentDescription="@string/action_popup"
        android:onClick="clickedPopupSettings"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        android:visibility="visible" />

    <ImageButton
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/delete_images"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_trash" />

    <ImageButton
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/send_photo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_send" />

    <TextView
        android:layout_marginTop="76dp"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:text=""
        android:scaleType="fitCenter"
        android:id="@+id/sessionCount"
        android:layout_width="74dp"
        android:layout_height="20dp" />

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:background="@drawable/image_button_shape"
        android:id="@+id/exposure"
        android:contentDescription="@string/exposure"
        android:onClick="clickedExposure"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_exposure" />

    <!--    <ImageButton
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/image_button_shape"
            android:id="@+id/switch_video"
            android:contentDescription="@string/switch_to_video"
            android:onClick="clickedSwitchVideo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_switch_video" />-->

    <SeekBar
        android:id="@+id/exposure_seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/exposure_compensation" />

    <SeekBar
        android:id="@+id/iso_seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/iso" />

    <SeekBar
        android:id="@+id/exposure_time_seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/exposure" />

    <FrameLayout
        android:id="@+id/prefs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <FrameLayout
        android:id="@+id/locker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:visibility="visible"
        android:id="@+id/popup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_toLeftOf="@+id/settings" />

    <FrameLayout
        tools:visibility="gone"
        android:id="@+id/progress_layout"
        android:background="#8d000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/hide_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
